# fkie-multi-agent-suite

./: .gitignore  README.md  bump-version.py  create_debs.sh  fkie_mas_suite.rosinstall  install_mas_debs.sh  mas-overview.xcf  rosdep.yaml  rosdep_ros1.yaml  run_tests.sh
fkie_mas_daemon/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
fkie_mas_daemon/fkie_mas_daemon/: __init__.py  file_item.py  file_servicer.py  launch_config.py  launch_context.py  launch_servicer.py  launch_validator.py  launcher.py  monitor_servicer.py  msg_encoder.py  parameter_servicer.py  ros_node.py  rosstate_jsonify.py  rosstate_servicer.py  runner.py  screen_servicer.py  server.py  startcfg.py  subscriber_node.py  time_helpers.py  version.py  version_servicer.py
fkie_mas_daemon/fkie_mas_daemon/monitor/: cpu_load.py  cpu_temperatur.py  hdd_usage.py  mem_usage.py  net_load.py  sensor_interface.py  service.py
fkie_mas_daemon/nodes/: mas-daemon  mas-subscriber
fkie_mas_daemon/scripts/: dynamic-reconfigure.py  mas-remote-node.py  mas-restart.py  mas-rosout-to-diag.py
fkie_mas_daemon/src/fkie_mas_daemon/: __init__.py  daemon.py  file_item.py  file_servicer.py  launch_config.py  launch_description.py  launch_servicer.py  launch_xml_loader.py  launcher.py  monitor_servicer.py  parameter_servicer.py  screen_servicer.py  startcfg.py  strings.py  subscriber_node.py  version.py  version_servicer.py
fkie_mas_daemon/src/fkie_mas_daemon/monitor/: cpu_load.py  cpu_temperatur.py  hdd_usage.py  mem_usage.py  net_load.py  sensor_interface.py  service.py
fkie_mas_daemon/tests/: CMakeLists.txt  test_file_servicer.py  test_launch_servicer.py  test_parameter_node.py
fkie_mas_daemon/tests/launch/: autostart.launch.xml  capability.launch.xml  capability_included.launch.py  capability_included.launch.xml  included.launch.xml  params.yaml  test_composable_launch.py  test_included_launch.py
fkie_mas_daemon/tests/resources/: description_example.launch  include_dummy.launch  included1.launch  test_node.py
fkie_mas_daemon/tests/resources/wincl/: incf.launch  root.launch
fkie_mas_daemon/tests/resources_alt/: description_example.launch
fkie_mas_discovery/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
fkie_mas_discovery/launch/: mas_discovery.launch
fkie_mas_discovery/nodes/: mas-discovery  mas-zeroconf
fkie_mas_discovery/src/: eprosima_pariticipant_listener.cpp  eprosima_participant_listener.cpp  fastdds_participant_listener.cpp  fastrtps_participant_listener.cpp
fkie_mas_discovery/src/fkie_mas_discovery/: __init__.py  common.py  filter_interface.py  interface_finder.py  master_discovery.py  master_info.py  master_monitor.py  udp.py  zeroconf.py
fkie_mas_discovery/tests/: test_filter_interface.py
fkie_mas_gui/: .env  .eslintrc.cjs  .eslintrc.js  .gitignore  .prettierrc.json  .prettierrc.yaml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  biome.json  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  eslint.config.ts  jsdoc.config.json  license-report-config.json  package-lock.json  package.json  package.xml  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vite-env.d.ts  vite.config.mjs  vite.config.ts
fkie_mas_gui/.erb/configs/: webpack.config.renderer.dev.ts
fkie_mas_gui/release/app/: package.json
fkie_mas_gui/src/: index.d.ts
fkie_mas_gui/src/main/: CommandLineInterface.ts  index.ts  main.ts  menu.ts  preload.ts  util.ts  windowStateKeeper.ts
fkie_mas_gui/src/main/IPC/: AutoUpdateManager.ts  CommandExecutor.ts  CommandLine.ts  DialogManager.ts  EditorManager.ts  (+14 more)
fkie_mas_gui/src/preload/: index.ts
fkie_mas_gui/src/renderer/: App.jsx  App.scss  App.tsx  ProviderStack.tsx  deps-licenses.json  editor.html  index.ejs  index.html  index.tsx  popout.html  preload.d.ts  publisher.html  subscriber.html  terminal.html
fkie_mas_gui/src/types/: AutoUpdateManager.ts  CommandExecutor.ts  CommandLine.ts  DialogManager.ts  EditorManager.ts  FileRange.ts  JsonObject.ts  LaunchArg.ts  LaunchArgs.ts  LaunchManager.ts  PasswordManager.ts  PublishManager.ts  ShutdownManager.ts  SubscriberManager.ts  TCredential.ts  TInfoState.ts  TResult.ts  TResultData.ts  TResultParam.ts  TResultProcess.ts  TRosInfo.ts  TRosMessageStruct.ts  TSystemInfo.ts  TTag.ts  TerminalManager.ts  index.ts
fkie_mas_gui/test/: custom-test-env.js
fkie_mas_meta/: CHANGELOG.rst  CMakeLists.txt  package.xml
fkie_mas_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.cfg
fkie_mas_msgs/msg/: LinkStatesStamped.msg  MasterState.msg  SyncMasterInfo.msg
fkie_mas_msgs/msg2/: ChangedState.msg  Participants.msg
fkie_mas_msgs/srv/: DiscoverMasters.srv  GetParticipants.srv  GetSyncInfo.srv
fkie_mas_pylib/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.cfg  setup.py
fkie_mas_pylib/fkie_mas_pylib/: defines.py  formats.py  names.py  ros_pkg.py  settings.py  websocket.py
fkie_mas_pylib/fkie_mas_pylib/crossbar/: base_session.py  launch_interface.py  runtime_interface.py  server.py
fkie_mas_pylib/fkie_mas_pylib/interface/: __init__.py  file_interface.py  launch_interface.py  runtime_interface.py
fkie_mas_pylib/fkie_mas_pylib/launch/: xml.py  xml_ros1.py
fkie_mas_pylib/fkie_mas_pylib/logging/: logging.py  ros2_logger.py
fkie_mas_pylib/fkie_mas_pylib/parameters/: ros1_parameters.py  ros2_parameter_interface.py  ros2_parameters.py
fkie_mas_pylib/fkie_mas_pylib/service/: future.py
fkie_mas_pylib/fkie_mas_pylib/system/: exceptions.py  host.py  process.py  ros1_masteruri.py  screen.py  supervised_popen.py  url.py
fkie_mas_pylib/fkie_mas_pylib/tests/: CMakeLists.txt  test_formats.py  test_host.py  test_launch_xml.py  test_ros_pkg.py  test_screen.py  test_url.py
fkie_mas_pylib/fkie_mas_pylib/websocket/: __init__.py  client.py  globals.py  handler.py  queue.py  server.py
fkie_mas_sync/: CHANGELOG.rst  CMakeLists.txt  epydoc.prj  mainpage.dox  package.xml  setup.py
fkie_mas_sync/launch/: mas_sync.launch
fkie_mas_sync/nodes/: mas-param-sync.py  mas-sync
fkie_mas_sync/src/fkie_mas_sync/: __init__.py  master_sync.py  sync_thread.py
(+419 files in other folders)
