<?xml version="1.0"?>
<package format="3">
  <name>fkie_mas_daemon</name>
  <version>3.0.1</version>
  <description>A daemon node to manage ROS launch files and launch nodes from loaded files.</description>

  <license>MIT</license>
  <author>Alexander Tiderko</author>
  <maintainer email="alexander.tiderko@gmail.com">Alexander Tiderko</maintainer>
  <url>https://github.com/fkie/multimaster_fkie</url>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>

  <depend condition="$ROS_VERSION == 1 and $ROS_PYTHON_VERSION == 2">python-catkin-pkg</depend>
  <depend condition="$ROS_VERSION == 1 and $ROS_PYTHON_VERSION == 3">python3-catkin-pkg</depend>
  <depend>diagnostic_msgs</depend>
  <depend>fkie_mas_discovery</depend>
  <depend>fkie_mas_msgs</depend>
  <depend>fkie_mas_pylib</depend>
  <depend condition="$ROS_VERSION == 1">roslaunch</depend>
  <depend condition="$ROS_VERSION == 1">rospy</depend>

  <depend condition="$ROS_PYTHON_VERSION == 3">python3-autobahn</depend>
  <depend condition="$ROS_VERSION == 1 and $ROS_PYTHON_VERSION == 2">python-psutil</depend>
  <depend condition="$ROS_VERSION == 1 and $ROS_PYTHON_VERSION == 2">python-rospkg</depend>
  <depend condition="$ROS_VERSION == 1 and $ROS_PYTHON_VERSION == 2">python-ruamel.yaml</depend>
  <depend condition="$ROS_VERSION == 1 and $ROS_PYTHON_VERSION == 2">python-watchdog</depend>
  <depend condition="$ROS_VERSION == 1 and $ROS_PYTHON_VERSION == 3">python3-rospkg</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3-psutil</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3-ruamel.yaml</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3-watchdog</depend>

  <depend condition="$ROS_VERSION == 2">launch</depend>
  <depend condition="$ROS_VERSION == 2">launch_xml</depend>

  <depend>screen</depend>

  <test_depend condition="$ROS_VERSION == 1">rostest</test_depend>
  <test_depend condition="$ROS_VERSION == 2">python3-pytest</test_depend>

  <export>
    <build_type condition="$ROS_VERSION == 2">ament_python</build_type>
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>
