<package format="3">
  <name>fkie_mas_meta</name>
  <!-- <replace>multimaster_fkie</replace> -->
  <description>
    The metapackage to combine the nodes required to establish and manage a multimaster network.
    This requires no or minimal configuration. The changes are automatically detected and synchronized.
  </description>
  <version>2.0.0</version>
  <license>MIT</license>
  <author>Alexander Tiderko</author>
  <maintainer email="alexander.tiderko@gmail.com">Alexander Tiderko</maintainer>
  <url>http://github.com/fkie/fkie-multi-agent-stuite</url>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

  <exec_depend>fkie_mas_msgs</exec_depend>
  <exec_depend>fkie_mas_pylib</exec_depend>
  <exec_depend>fkie_mas_discovery</exec_depend>
  <exec_depend>fkie_mas_daemon</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">fkie_mas_sync</exec_depend>

  <export>
    <!-- <metapackage condition="$ROS_VERSION == 1"></metapackage> -->
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>

</package>
