<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>fkie_mas_pylib</name>
  <description>
     Python helpers required by multi agent suite packages.
  </description>
  <version>4.1.1</version>
  <license>MIT</license>
  <author>Alexander Tiderko</author>
  <maintainer email="alexander.tiderko@gmail.com">Alexander Tiderko</maintainer>
  <url>http://github.com/fkie/fkie-multi-agent-suite</url>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>

  <depend condition="$ROS_VERSION == 1 and $ROS_PYTHON_VERSION == 2">python-catkin-pkg</depend>
  <depend condition="$ROS_VERSION == 1 and $ROS_PYTHON_VERSION == 3">python3-catkin-pkg</depend>
  <depend condition="$ROS_VERSION == 1">rospy</depend>
  <depend condition="$ROS_VERSION == 2">rclpy</depend>
  <depend condition="$ROS_VERSION == 1 and $ROS_PYTHON_VERSION == 2">python-ruamel.yaml</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3-netifaces</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3-ruamel.yaml</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3-websockets</depend>
  <depend>fkie_mas_msgs</depend>

  <test_depend condition="$ROS_VERSION == 1">rostest</test_depend>
  <test_depend condition="$ROS_VERSION == 2">python3-pytest</test_depend>

  <export>
    <build_type condition="$ROS_VERSION == 2">ament_python</build_type>
  </export>


</package>
